Fixed text wrapping issue on showcase for smaller screen sizes

--- a/src/components/SingleShow/ShowShowcase.module.scss
+++ b/src/components/SingleShow/ShowShowcase.module.scss
@@ -81,6 +81,7 @@
               letter-spacing: 2px;
 
               @include media('<tablet') {
+                display: inline-block;
                 font-size: 22px;
               }
             }
